--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select><br/>
-        Interest : <span id="result"></span><br>
-        <span id="result">
+        <button onclick="compute()">Compute Interest</button><br/>
+       <span id="result" onchange="compute()">
 
         </span>
-
-        <button onclick="compute()">Compute Interest</button><br/>
         <p><footer>
             &#169; This Calculator belongs to Melanie
         </footer></p>
