--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <option value="10">10</option>
         </select><br/>
         <button onclick="compute()">Compute Interest</button><br/>
-       <span id="result" onchange="compute()">
+       <span id="result">
 
         </span>
         <p><footer>
