--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select><br/>
-        <button onclick="compute()">Compute Interest</button><br/>
+        <button onclick="compute();checkdata()">Compute Interest</button><br/>
        <span id="result">
 
         </span>
