--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             <option value="9">9</option>
             <option value="10">10</option>
         </select><br/>
+        Interest: <span id="result"></span><br>   
         <button onclick="compute();checkdata()">Compute Interest</button><br/>
-       <span id="result">
-
-        </span>
+       <span id="result"></span>
         <p><footer>
             &#169; This Calculator belongs to Melanie
         </footer></p>
