--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <option value="10">10</option>
         </select><br/>
         Interest: <span id="result"></span><br>   
-        <button onclick="compute();checkdata()">Compute Interest</button><br/>
+        <button onclick="compute();checkdata();">Compute Interest</button><br/>
        <span id="result"></span>
         <p><footer>
             &#169; This Calculator belongs to Melanie
