--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
         Amount <input type="number" id="principal"><br/>
-       Interest Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="showVal(this.value)">
+       Interest Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange="UpdateRate()">
         <span id="rate_val"></span>%<br/>
         No. of Years 
         <select id="years">
@@ -25,7 +25,7 @@
             <option value="10">10</option>
         </select><br/>
         Interest: <span id="result"></span><br>   
-        <button onclick="compute();checkdata();">Compute Interest</button><br/>
+        <button onclick="compute()">Compute Interest</button><br/>
        <span id="result"></span>
         <p><footer>
             &#169; This Calculator belongs to Melanie
