--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <body>  
         <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
-        Amount <input type="number" id="principal"><br/>
+        <table style="width:100%" >
+           <tr>
+               <td style="width:40%"> Amount</td> <td style="width:40%"> <input type="number" id="principal"></td>
+            </tr>
+            </table>
        Interest Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange="UpdateRate()">
         <span id="rate_val">10.25%</span><br/>
         No. of Years:
