--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </tr>
             </table>
        Interest Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange="UpdateRate()">
-        <span id="rate_val">10.25%</span><br/>
+        <span id="rate_val">10.25</span>%<br/>
         No. of Years:
         <select id="years">
             <option value="1">1</option>
