--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <body>  
         <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
-            <div style="margin-right:100px">
+            <div style="margin-left:50px">
             <table style="width:100%" >
            <tr>
-               <td style="width:20%"> Amount</td> <td style="width:80%"> <input type="number" id="principal"></td>
+               <td style="width:30%">Amount</td> 
+               <td style="width:70%"><input type="number" id="principal"></td>
             </tr>
-            </table>
-            </div>
-       Interest Rate <input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange="UpdateRate()">
-        <span id="rate_val">10.25</span>%<br/>
-        No. of Years:
-        <select id="years">
+            <tr>
+                <td style="width:30%">Interest Rate</td>
+                <td style="width:70%"><input type="range" min="1" max="20" step="0.25" value="10.25" id="rate" onchange="UpdateRate()"><span id="rate_val">10.25</span>%</td>
+            </tr>
+            <tr>
+                <td style="width:30%">No. of Years</td>
+                <td style="width:70%"><select id="years">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -29,10 +31,23 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
-        </select><br/>
-        Interest: <span id="result"></span><br>   
-        <button onclick="compute()">Compute Interest</button><br/>
-       <span id="result"></span>
+                    </select></td>
+            </tr>
+            <tr>   
+                <td style="width:30%">Interest</td>
+                <td style="width:70%"><span id="result"></span></td>
+            </tr>
+            <tr>
+                <td style="width:30%"><button onclick="compute()">Compute Interest</button></td>
+                <td style="width:70%"></td>
+            </tr>
+            <tr>   
+                <td style="width:50%"><span id="result"></span></td>
+                <td style="width:50%"></td>
+            </tr>
+            <tr>
+                </table>
+            </div>
         <p><footer>
             &#169; This Calculator belongs to Melanie
         </footer></p>
