--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td style="width:30%"><button onclick="compute()">Compute Interest</button></td>
-                <td style="width:70%"><button onclick="ClearCalculator()">Clear Calculator</button></td>
+                <td style="width:70%"></td>
             </tr>
               </table>
             </div>
